tests/anonstnbad.out
./anonstnbad.svx:2:6: error: Character "." not allowed in station name (use *SET NAMES to set allowed characters)
./anonstnbad.svx:3:6: error: Character "." not allowed in station name (use *SET NAMES to set allowed characters)
./anonstnbad.svx:4:6: error: Character "." not allowed in station name (use *SET NAMES to set allowed characters)
./anonstnbad.svx:6:6: error: Can't have a leg between two anonymous stations
./anonstnbad.svx:7:7: error: Can't have a leg between two anonymous stations
./anonstnbad.svx:8:5: error: Can't have a leg between two anonymous stations

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...
./anonstnbad.svx:5: warning: Unused fixed point "1"

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 1 warning(s) and 6 error(s) - no output files produced.
